--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
     </div>
 
     <script type="text/javascript">
-        /**
-         * Sorunun cevabını bu yorumdan sonra yazınız.
-         */
-
+        function carpma()
+var a,b;
+        var sonuc=0;
+{               
+        var a=prompt("birinci Sayı:","");
+        var b=prompt("ikinci Sayı:","");
+}
         
     </script>
     <div class="clearfix"></div>
